--- a/public/game.html
+++ b/public/game.html
@@ -18,7 +18,6 @@
       width: 100%;
       height: 100%;
       background-color: rgba(0,0,0,0.4);
-      display: flex;
       align-items: center;
       justify-content: center;
     }
@@ -35,6 +34,25 @@
       font-weight: bold;
       color: #4CAF50;
       margin-bottom: 20px;
+    }
+    
+    /* Button styles */
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: #4CAF50;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    button:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
     }
   </style>
 </head>
